Jank abounds, regardless the flicker is gone, the animation is fixed & all mouse detection seems to be functional enough That's enough for today

--- a/react-src/src/components/GridSquare.scss
+++ b/react-src/src/components/GridSquare.scss
@@ -20,7 +20,7 @@
 }
 
 .grid-square {
-  @apply border-slate-400;
+  @apply border-slate-500;
   border-width: 0 0 1px 1px;
   background-color: white;
   height: 100%;
@@ -40,8 +40,8 @@
 }
 
 .val-wall {
-  opacity: 0;
-  border: 0px;
+  visibility: hidden;
+  //border: 0px;
 }
 
 $standard-duration: 0.3s;
@@ -60,16 +60,18 @@ $standard-duration: 0.3s;
 
 @keyframes pop {
   0% {
+    z-index: 10;
     border-width: 1px;
     filter: brightness(0.8);
     box-shadow: 1px 1px 1px 1px black;
   }
   50% {
-    z-index: 10;
+    z-index: 20;
     transform: scale(1.3);
     box-shadow: 2px 2px 2px 2px black;
   }
   100% {
+    z-index: 10;
     box-shadow: 1px 1px 1px 1px black;
   }
 }
